场内基金数据分析

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -199,7 +199,7 @@ post_copyright:
 
 # Sponsor/reward
 reward:
-  enable: true
+  enable: false
   QR_code:
     - img: /assets/img/QR/wechatpay.jpg
       link:
